# flake8_require_beartype

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.IN  README.md  setup.cfg
tests/: flake8_require_beartype_test.py
tests/data/: input.txt
