[metadata]
name = flake8_require_beartype
version = 0.1.1
description = flake8 plugin which checks for use of @beartype decorator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rbroderi/flake8_require_beartype
author = Richard Broderick
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_require_beartype
install_requires =
    flake8>=3.7
    importlib-metadata>=0.9;python_version<"3.8"
python_requires = >=3.7

[options.entry_points]
flake8.extension =
    RBT=flake8_require_beartype:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
